overlays/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: caddy-ingress
#   annotations:
#   nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /caddy
#         pathType: Prefix
#         backend:
#           service:
#             name: caddy-service
#             port:
#               name: http
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    argocd.argoproj.io/instance: caddy
  name: caddy-ingress
  namespace: default
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
    - http:
        paths:
          - backend:
              service:
                name: caddy-service
                port:
                  name: http
            path: /caddy
            pathType: Prefix
